--- a/src/App.css
+++ b/src/App.css
@@ -1,115 +1,102 @@
+@import url("https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@400;500;600&display=swap");
 html,
 body,
 #root {
-  font: 0.9rem sans-serif;
-  background: #0a1f44;
-  color: #5e83d8;
-  height: 100%;
-  margin: 0;
+    font: 0.9rem sans-serif;
+    color: #5e83d8;
+    background-color: #496096;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: "Merriweather Sans", sans-serif;
 }
 
-.main-container {
-  background: linear-gradient(
-    rgba(96, 129, 235, 0.63),
-    rgba(14, 10, 10, 0.418)
-  );
-  background-size: cover;
-  background-position: center;
-
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-.sun-container {
-  background: linear-gradient(
-    rgb(255, 242, 65),
-    rgb(248, 113, 34),
-    rgba(190, 3, 3, 0.925)
-  );
-  background-size: cover;
-  background-position: center;
-
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+.container {
+    width: 100%;
+    max-width: 650px;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
 }
 
 .search {
-  outline: none;
-  width: 100%;
-  max-width: 215px;
-  padding: 10px 2%;
-  font-size: 20px;
-  border-radius: 7px;
-  border: none;
-  margin-bottom: 5%;
-  background: rgba(250, 250, 250, 0.85);
+    padding: 5px 15px;
+    margin: 15px 0;
+    font-size: 1.2rem;
+    border-radius: 15px;
+    border: none;
+    position: relative;
+    top: 0;
+    left: 0;
+    color: #e6d3ff;
+    background-image: linear-gradient(
+        to right,
+        rgb(16, 72, 155),
+        rgb(75, 72, 236)
+    );
+    max-width: 200px;
+    font-weight: 500;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .city {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  padding: 15px 5%;
-  border-radius: 20px;
-  background: rgba(250, 250, 250, 0.85);
-  box-shadow: 10px 10px 5px 0px rgba(15, 15, 15, 0.404);
+    background-color: #e6d3ff;
+    width: 100%;
+    max-width: 200px;
+    margin: 2px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    padding: 5px 15px;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
-p {
-  margin-top: 10px;
-  text-transform: uppercase;
-  letter-spacing: 0.05em;
-}
-
-.city-temp {
-  font-size: 5rem;
-  font-weight: bold;
-  margin-top: 10px;
-  color: #1e2432;
-  text-align: center;
-}
-
-.city sup {
-  font-size: 0.5em;
-}
-
-.city-name {
-  font-size: 2em;
+.city-name span {
+    color: #302183;
+    padding: 3px;
+    border-radius: 5px;
+    font-size: 1.8rem;
 }
 
 .city-name sup {
-  padding: 0.2em 0.6em;
-  margin-left: 0.2em;
-  border-radius: 30px;
-  color: #fff;
-  background: #ff8c00;
+    background-color: #ffb657;
+    color: #fff;
+    padding: 3px;
+    border-radius: 5px;
+    font-size: 1.2rem;
 }
 
-.city-icon {
-  margin-top: 10px;
-  width: 100px;
-  height: 100px;
+.city-temp {
+    font-size: 5rem;
+    font-weight: 600;
+    color: #302183;
+}
+
+.city-temp sup {
+    font-size: 2rem;
+    font-weight: 500;
 }
 
 .info {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-@media only screen and (max-width: 600px) {
-  .search {
-    padding: 20px 15%;
-  }
-
-  .city {
-    padding: 40px 20%;
-  }
+.info img {
+    display: block;
+    max-width: 100%;
+}
+.info p {
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+.info p::first-letter {
+    text-transform: uppercase;
 }
